# aoc2022

./: README.md
dotnet/: Aoc2022.sln
dotnet/src/Day01/: CalorieCounter.cs  Day01.cs  Day01.csproj  Program.cs
dotnet/src/Day02/: CalculateMoveEngine.cs  CalculateOutcomeEngine.cs  Day02.csproj  GameClient.cs  GameMode.cs  IGameEngine.cs  Outcome.cs  Program.cs  Shape.cs
dotnet/src/Day03/: CharValue.cs  Day03.csproj  Program.cs  StringExtensions.cs
dotnet/src/InputLoader/: InputLoader.cs
dotnet/tests/Day01.Tests/: CalorieCounterTests.cs  Day01.Tests.csproj  UnitTest1.cs  Usings.cs
dotnet/tests/Day02.Tests/: Day02.Tests.csproj  GameTests.cs  ShapeTests.cs  Usings.cs
elixir/aoc22/: mix.exs
elixir/aoc22/lib/: aoc22.ex
elixir/aoc22/lib/aoc22/day1/: part1.ex  part2.ex
ocaml/aoc22/: aoc22.opam  dune-project
python/: main.py
python/day01/: program.py
python/day02/: program.py
python/day03/: program.py
ruby/: main.rb
ruby/day01/: program.rb
ts/: package.json  pnpm-lock.yaml  tsconfig.json
ts/src/: main.ts
ts/src/day1/: index.ts
ts/src/day2/: index.ts
ts/src/day3/: index.ts
ts/src/inputs/: day3
ts/tests/: day1.test.js  day2.test.js  day3.test.js
