(lang dune 3.9)

(name aoc22)

(generate_opam_files true)

(source
 (github craake/aoc22))

(authors "Marko Vucinic")

(maintainers "Marko Vucinic")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name aoc22)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
